--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopmysite",
-  "homepage": "https://sauravtiwari01.github.io/",
+  "homepage": "https://sauravtiwari01.github.io/ecom-site/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
