--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ VITE_SITE_WHATSAPP = +91 9999888777
 VITE_SITE_INSTAGRAM = INSTA
 VITE_SITE_FACEBOOK = FB
 VITE_SITE_TWITTER = X
-VITE_SITE_IMG_SERVER = http://localhost:8000
+VITE_SITE_IMG_SERVER = 
 VITE_SITE_SERVER = http://localhost:8000
